--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Raul</h1>
-    <a href="C:\Users\raulo\OneDrive\Documentos\CFGS DAM 20242025\M0373 Llenguatge De Marques\3 HTML5 i CSS3\html\exercicis\ex1.html" > Exercici 1</a>
+    <a href="C:\Users\raulo\OneDrive\Documentos\CFGS DAM 20242025\M0373 Llenguatge De Marques\3 HTML5 i CSS3\html\exercici1.html" > Exercici 1</a>
 </body>
 </html>
