--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Raul Ortiz</title>
 </head>
 <body>
-    <h1>Raul</h1>
-    <a href="C:\Users\raulo\OneDrive\Documentos\CFGS DAM 20242025\M0373 Llenguatge De Marques\3 HTML5 i CSS3\html\exercici1.html" > Exercici 1</a>
+    <h1>Raul Ortiz</h1>
+    <a href="C:\Users\raulo\OneDrive\Documentos\CFGS DAM 20242025\M0373 Llenguatge De Marques\3 HTML5 i CSS3\html\exercici1\botigaRellotges.html" > Exercici 1</a>
 </body>
 </html>
