--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Raul Ortiz</h1>
-    <a href="\exercici1\botigaRellotges.html" > Exercici 1</a>
+    <a href="\exercici1\botigaRellotges.html"> Exercici 1</a>
+    <a href="\exercici2\acdc-html"> Exercici 2</a>
 </body>
 </html>
