--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="overlay">
             <p>Botiga de Rellotges</p>
             <div class="icones-contenidor">
-              <a href="file:///C:/Users/raulo/OneDrive/Documentos/CFGS%20DAM%2020242025/M0373%20Llenguatge%20De%20Marques/3%20HTML5%20i%20CSS3/html/exercici1/botigaRellotges.html"
+              <a href="exercici1/botigaRellotges.html"
                 target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-laptop"></i>
               </a>
@@ -168,7 +168,7 @@
           <div class="overlay">
             <p>AC/DC</p>
             <div class="icones-contenidor">
-              <a href="file:///C:/Users/raulo/OneDrive/Documentos/CFGS%20DAM%2020242025/M0373%20Llenguatge%20De%20Marques/3%20HTML5%20i%20CSS3/html/exercici2/acdc.html"
+              <a href="exercici2/acdc.html"
                 target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-laptop"></i>
               </a>
@@ -181,7 +181,7 @@
           <div class="overlay">
             <p>Salvador Dalí</p>
             <div class="icones-contenidor">
-              <a href="file:///C:/Users/raulo/OneDrive/Documentos/CFGS%20DAM%2020242025/M0373%20Llenguatge%20De%20Marques/3%20HTML5%20i%20CSS3/html/exercici3/dali.html"
+              <a href="exercici3/dali.html"
                 target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-laptop"></i>
               </a>
@@ -194,7 +194,7 @@
           <div class="overlay">
             <p>St. Pere de Vallhonesta</p>
             <div class="icones-contenidor">
-              <a href="file:///C:/Users/raulo/OneDrive/Documentos/CFGS%20DAM%2020242025/M0373%20Llenguatge%20De%20Marques/3%20HTML5%20i%20CSS3/html/exercici4/stperevallhonesta.html"
+              <a href="exercici4/stperevallhonesta.html"
                 target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-laptop"></i>
               </a>
