--- a/index.html
+++ b/index.html
@@ -201,6 +201,19 @@
             </div>
           </div>
         </div>
+        <!--Projecte 5-->
+        <div class="projecte col-12 col-md-6 col-lg-4">
+          <img src="imatges/pagina5.png" alt="projecte 5" />
+          <div class="overlay">
+            <p>Joc del Wach-A-Mole</p>
+            <div class="icones-contenidor">
+              <a href="Wach-A-Mole/wachamole.html"
+                target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-laptop"></i>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
