--- a/index.html
+++ b/index.html
@@ -214,6 +214,19 @@
             </div>
           </div>
         </div>
+        <!--Projecte 6-->
+        <div class="projecte col-12 col-md-6 col-lg-4">
+          <img src="imatges/pagina6.png" alt="projecte 6" />
+          <div class="overlay">
+            <p>Gim-Jump</p>
+            <div class="icones-contenidor">
+              <a href="Gim-Jump/GimJump_EspressoMacchiato.html"
+                target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-laptop"></i>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
