Api Rick & Morty Finish

--- a/index.html
+++ b/index.html
@@ -227,6 +227,19 @@
             </div>
           </div>
         </div>
+        <!--Projecte 7-->
+        <div class="projecte col-12 col-md-6 col-lg-4">
+          <img src="imatges/pagina7.png" alt="projecte 7" />
+          <div class="overlay">
+            <p>API Rick&Morty</p>
+            <div class="icones-contenidor">
+              <a href="API_Rick&Morty/API_RickMorty.html"
+                target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-laptop"></i>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
